force-app/main/default/objects/FEC_Decision_Rule__c/FEC_Decision_Rule__c.object-meta.xml
<CustomObject>
    <description>Live Decision Rule - stores stage transition routing rules for runtime evaluation (replaces FEC_Stage_Change__c)</description>
    <label>FEC Decision Rule</label>
    <nameField>
        <displayFormat>LR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FEC Decision Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>