force-app/main/default/objects/FEC_Decision_Rule__c/fields/FEC_Action_Button__c.field-meta.xml
<CustomField>
    <fullName>FEC_Action_Button__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Button</label>
    <referenceTo>FEC_Action_Button__c</referenceTo>
    <relationshipLabel>Decision Rules</relationshipLabel>
    <relationshipName>Decision_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>