force-app/main/default/objects/FEC_Decision_Rule__c/fields/FEC_Key_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Key_ID__c</fullName>
    <description>Generic context key for filtering rules by domain context (e.g., Business Process ID). Enables reuse across different domains.</description>
    <label>Key ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>