force-app/main/default/objects/FEC_Decision_Rule__c/fields/FEC_Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Next_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>Decision Rules (Next Stage)</relationshipLabel>
    <relationshipName>Next_Stage_Decision_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>