force-app/main/default/objects/FEC_Decision_Rule__c/fields/FEC_Table_Key__c.field-meta.xml
<CustomField>
    <fullName>FEC_Table_Key__c</fullName>
    <label>Table Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>